<resources>
    <string name="app_name">PARAMED</string>
    <string name="app_welcome">WELCOME</string>
    <string name="app_welcome1">WELCOME TO PARAMED</string>
    <string name="homescreenB1">paramedic</string>
    <string name="homescreenB2">client</string>
    <string name="patientB1">Call Now!</string>
    <string name="homescreenI1"></string>
    <string name="homescreenI2"></string>
    <string name="patientI1"></string>
    <string name="alert_title2">IDENTITY CHECK</string>
    <string name="ident_msg">Are you a Paramedic?</string>
    <string name="OK">OK</string>
    <string name="home_address">Map address will be displayed here</string>
    <string name="parmadicscreenT1">Waiting for a call!</string>
    <string name="paramedSignIn">Paramedic Sign in:</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="welcome">Welcome to paramed!</string>
    <string name="signin">sign in</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="hosp1">
        <item name="id">1</item>
        <item name="loc_lat">43.657735</item>
        <item name="loc_long"> -79.390434</item>
        <item name="name">Mount Sinai Toronto Hospital</item>
        <item name="street">600 University Avenue</item>
        <item name="city">Toronto</item>
        <item name="province">ON</item>
        <item name="zip">M5G1X5</item>
    </string-array>
    <string-array name="hosp2">
        <item name="id">2</item>
        <item name="loc_lat">43.729488</item>
        <item name="loc_long">-79.598050</item>
        <item name="name">William Osler Health System -
            Etobicoke General Hospital</item>
        <item name="street">Humber College Blvd</item>
        <item name="city">Etobicoke</item>
        <item name="province">ON</item>
        <item name="zip">M9V5B5</item>
    </string-array>
    <string-array name="hosp3">
        <item name="id">3</item>
        <item name="loc_lat">43.262312</item>
        <item name="loc_long">-79.854611</item>
        <item name="name">Hamilton General Hospital</item>
        <item name="street">237 Barton St E</item>
        <item name="city">Hamilton</item>
        <item name="province">ON</item>
        <item name="zip">L8L2X2</item>
    </string-array>
    <string-array name="hosp4">
        <item name="id">4</item>
        <item name="loc_lat">43.746405</item>
        <item name="loc_long">-79.743845</item>
        <item name="name">Brampton Civic Hospital</item>
        <item name="street">2100 Bovaird Dr E</item>
        <item name="city">Brampton</item>
        <item name="province">ON</item>
        <item name="zip">L6R3J7</item>
    </string-array>
    <string-array name="hosp5">
        <item name="id">5</item>
        <item name="loc_lat">45.402720</item>
        <item name="loc_long">-75.649275</item>
        <item name="name">Ottawa Hospital Civic Campus</item>
        <item name="street">1053 Carling Ave</item>
        <item name="city">Ottawa</item>
        <item name="province">ON</item>
        <item name="zip">K1Y4E9</item>
    </string-array>
    <string name="title_activity_options_navigation">optionsNavigation</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">maps</string>
    <string name="loc_change">Change Your Location:</string>
    <string name="name_dialog">For any inquires about your name, please notify the database administrator.</string>
    <string name="hosp_dialog1">The hospital that you are currently stationed is:</string>
    <string name="hosp_dialog2">Date of hospital selection:</string>
    <string name="stat_dialog1">Your state is</string>
    <string name="stat_dialog2">You have been</string>
    <string name="stat_dialog3">hours,</string>
    <string name="stat_dialog4">minutes,</string>
    <string name="stat_dialog5">seconds.</string>
    <string name="stat_dialog6">Standby for incoming calls.</string>
    <string name="stat_dialog7">for</string>
    <string name="stat_dialog8">days</string>
    <string name="name_dialog2">Hi</string>
    <string name="patient_txt">Patient Health Monitor:</string>
    <string name="oxygen">Blood Oxygen Rate(SPO2):</string>
    <string name="temperat">Temperature:</string>
    <string name="heart">Heart Rate:</string>
    <string name="spo2">SP02 Readings</string>
    <string name="temp">Temperature Readings</string>
    <string name="hrt">Heart Rate readings</string>
    <string name="signout_dialog">Are you sure you would like to sign out?</string>
    <string name="title_notifications">recent</string>
    <string name="name_hint">Type your name here</string>
    <string name="success_dialog">Your Info was sent successfully!</string>
    <string name="request_dialog">Request to chat. Click \'yes\' to start chat</string>
    <string name="signout">Sign out</string>
    <string name="update">Update Info</string>
    <string name="activity">View Activity</string>
    <string name="settings">Terms and Conditions</string>
    <string name="mymenu">MENU</string>
    <string name="start">start</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="client">Client Name</string>
    <string name="emergency">Emergency</string>
    <string name="emerg_address">Address</string>
    <string name="client_address">Client Home address</string>
    <string name="client_contact">Client tel</string>
    <string name="paraName">Name:</string>
    <string name="status">Status:</string>
    <string name="hospital">Hospital:     </string>
    <string name="para_address">Address:</string>
    <string name="hosp_address">Address:    :</string>
    <string name="credentials">Send Your Info</string>
    <string name="updateInfo">Update Your Info</string>
    <string name="maps">Go to Maps</string>
    <string name="submit">send</string>
    <string name="addressinfo">Your Address Info:</string>
    <string name="City">City    :</string>
    <string name="ZIP">ZIP     :</string>
    <string name="street">Street  :</string>
    <string name="contact">Contact:</string>
    <string name="province">Province:</string>
    <string name="alert_title">WARNING</string>
    <string name="alert_Message">Are you sure you want to EXIT?</string>
    <string name="clientInfo_title">UPDATE INFO</string>
    <string name="patients_label">Your Patients:</string>
    <string name="latest">Your Most Recent Patient:</string>
    <string name="status_str">Status goes here</string>
    <string name="patient_stat">Emergency Status:</string>
    <string name="validate">Are you sure you would like to change your location?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="client_home_label">Patients Home Address:</string>
    <string name="ca_label">Emergency Location:</string>
    <string name="policy">PARAMED</string>

    <string name="positiveChoice">Yes</string>
    <string name="negetiveChoice">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hosp_inf">Hospital Info</string>
    <string name="par_stat_men">Your Status</string>
    <string name="title_activity_paramedic_video">ParamedicVideoActivity</string>
    <string name="phone_warning">Please enter a valid phone number</string>
    <string name="field_warning">All fields are required</string>
    <string name="pattern_warning">Values do not match expected pattern</string>
    <string name="end">END</string>

</resources>
